# streamlit-popukation-dashboard

./: README.md  pyproject.toml
src/: home.py
src/pages/: page1.py  page2.py
