[project]
name = "streamlit-population-dashboard"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "HayatoKTYM" }
]
dependencies = [
    "streamlit>=1.27.0",
    "matplotlib>=3.8.0",
    "plotly>=5.17.0",
]
readme = "README.md"
requires-python = ">= 3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
